--- a/sample/src/main/res/layout/main_tab.xml
+++ b/sample/src/main/res/layout/main_tab.xml
@@ -10,8 +10,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/compactcalendar_view"
         android:layout_width="fill_parent"
-        android:layout_height="250dp"
-        app:compactCalendarTargetHeight="250dp"
+        android:layout_height="fill_parent"
         app:compactCalendarTextSize="12sp"
         app:compactCalendarBackgroundColor="#ffe95451"
         app:compactCalendarTextColor="#fff"
