--- a/sample/src/main/res/layout/tab_2.xml
+++ b/sample/src/main/res/layout/tab_2.xml
@@ -3,21 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="You Are In Tab 2"
-        android:id="@+id/textView"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
-
-    <ListView
-        android:id="@+id/bookings_listview"
-        android:layout_below="@+id/calendar_control_buttons_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    </ListView>
-
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/my_recycler_view"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
